# email-env

./: .gitignore  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  z.txt
.claude/: settings.local.json
.github/workflows/: sync-to-hub.yml
server/: app.py
